# multi-agent-project-1

./: .bandit  .dockerignore  .trivyignore  Dockerfile  README.md  agent_orchestration2.drawio  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd-eks.yml  ci.yml  llmops-eval.yml  mlops-retrain.yml  security-scan.yml
agents/: __init__.py  base_agent.py  campaign_agent.py  crm_loyalty_agent.py  recommendation_agent.py  segmentation_agent.py
app/: __init__.py  api.py
data/: campaigns.json  customers.json  loyalty_events.json  products.json  transactions.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
llmops/: __init__.py  eval_log.jsonl  observability.py  prompt_registry.py  response_evaluator.py  token_tracker.py
mcp_client/: __init__.py  client.py
mcp_server/: __init__.py  data_store.py  server.py
mcp_server/tools/: __init__.py  campaign_tools.py  crm_loyalty_tools.py  recommendation_tools.py  segmentation_tools.py
mlops/: __init__.py  batch_inference.py  data_pipeline.py  model_registry.py  train_clustering.py
orchestrator/: __init__.py  orchestrator.py
security/: __init__.py  code_scanner.py  image_scanner.py  owasp_ai_scanner.py  report.py
tests/: __init__.py  test_data_store.py  test_tools.py
ui/: __init__.py  console.py
